--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -10,6 +10,16 @@
     font-weight: bold;
 }
 
+.Button:first-of-type {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.Button:disabled {
+    color: #ccc;
+    cursor: not-allowed;
+}
+
 .Success {
     color: #5C9210;
 }
